--- a/week1/index.html
+++ b/week1/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>marwan aboudaoud</title>
-    <link rel="stylesheet" href="marwan.css">
+    <link rel="stylesheet" href="main.css">
   </head>
    <body>
     <h1><img id="who-am-i-1" src="face5.png"  alt="who" width="110">
