--- a/week3/index.html
+++ b/week3/index.html
@@ -6,7 +6,7 @@
     <head>
         <meta charset="utf-8">
         <title>rijksoverheid</title>
-        <link rel="stylesheet" href="week3.css">
+        <link rel="stylesheet" href="main.css">
 </head>
 <body>
     
