--- a/week3/index.html
+++ b/week3/index.html
@@ -6,7 +6,7 @@
     <head>
         <meta charset="utf-8">
         <title>rijksoverheid</title>
-        <link rel="stylesheet" href="main.css">
+        <link rel="stylesheet" href="week3.css">
 </head>
 <body>
     
@@ -158,6 +158,7 @@
    </section>
 
    <section>
+       <div id="white">
           <h2>nieuws</h2>
 
           <ul id="news">
@@ -228,7 +229,7 @@
 
           </ul>
 
-
+        </div>
    </section>
 
  
